# claude-dashboard

./: .gitignore  LICENSE  README.md  compass.yml  issues.md  main.py  pyproject.toml  review-filter-feature.md  spec.md
docs/plans/: 2026-03-30-001-fix-resume-session-wrong-cwd-plan.md  todo.md
docs/solutions/: README.md  claude-code-session-tui-lessons.md  clear-session-and-subagent-filtering.md  configurable-days-filter-input-widget.md  dismissal-log-filename-mismatch.md  implementation-checklist.md  resume-wrong-cwd-bug.md  timestamp-formatting.md  timestamp-z-suffix-parsing.md
docs/solutions/runtime-errors/: tui-open-session-wrong-working-directory.md
notes/: cwd-bug-spec-review.md  research-7day-filter.md  review-7day-filter.md
notes/reviews/: grouped-view-simplicity-review.md
notes/solutions/performance-issues/: tui-cold-start-lazy-loading.md
src/: __init__.py  cache.py  dismiss.py  parser.py  ui.py
tests/: conftest.py  test_cache.py  test_dismiss.py  test_parser.py  test_ui_bindings.py
