[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-dashboard"
version = "0.1.0"
description = "A TUI to track pending Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
agent-dashboard = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
